--- a/app/views/enterprise/show.html.erb
+++ b/app/views/enterprise/show.html.erb
@@ -31,6 +31,7 @@
   </div>
 
 
+
 <div >
   <h2 >Which Git servers are supported?</h2>
   <div class="well-white" style="margin-bottom: 0px;" >
@@ -166,6 +167,92 @@
       the desired data into the local database. Depending on the number of the dependencies 
       this can take a couple of minutes. Besides that there is a nightly sync, to keep the metadata 
       for the local dependencies up-to-date. 
+    </p>
+  </div>
+
+
+  <h2 >Pricing</h2>
+  <div class="well-white" >  
+    <p >
+      <div class="row"> 
+        <div class="span5 pull-left">
+          <table class="table table-striped">
+            <tr>
+              <th>Projects</th>
+              <th>Monthly</th>
+              <th>Yearly</th>
+            </tr>
+            <tr>
+              <td>5</td>
+              <td>200,00 €</td>
+              <td>2400,00 €</td>
+            </tr>
+            <tr>
+              <td>10</td>
+              <td>400,00 €</td>
+              <td>4.800,00 €</td>
+            </tr>
+            <tr>
+              <td>20</td>
+              <td>800,00 €</td>
+              <td>9.600,00 €</td>
+            </tr>
+            <tr>
+              <td>40</td>
+              <td>1.600,00 €</td>
+              <td>19.200,00 €</td>
+            </tr>
+            <tr>
+              <td>60</td>
+              <td>2.400,00 €</td>
+              <td>28.800,00 €</td>
+            </tr>
+            <tr>
+              <td>80</td>
+              <td>3.200,00 €</td>
+              <td>38.400,00 €</td>
+            </tr>
+            <tr>
+              <td>100</td>
+              <td>4.000,00 €</td>
+              <td>48.000,00 €</td>
+            </tr>
+            <tr>
+              <td>150</td>
+              <td>6.000,00 €</td>
+              <td>72.000,00 €</td>
+            </tr>
+            <tr>
+              <td>200</td>
+              <td>8.000,00 €</td>
+              <td>96.000,00 €</td>
+            </tr>
+            <tr>
+              <td><b>UNLIMITED</b></td>
+              <td>8.250,00 €</td>
+              <td>99.000,00 €</td>
+            </tr>
+          </table>
+
+        </div>
+        <div class="span6 pull-right">
+          <h4>30 Day Free Testing</h4>
+          The VersionEye Enterprise VM can be tested for 30 days for free!<br/><br/>
+
+          <h4>How do you define a project?</h4>
+          A project on VersionEye is currently the representation of a project file. For example a pom.xml or a Gemfile.
+          Maven multi module projects are counted as 1 project! 
+          <br/><br/>
+
+          <h4>Updates</h4>
+          VersionEye provides all updates as Docker containers for free!<br/><br/>
+
+          <h4>Server Limitations</h4>
+          This is the pricing for a one server installation. There are no limitations regarding CPUs and RAM.<br/><br/>
+        </div>
+
+      </div>
+      
     </p>
   </div>
 
