--- a/app/views/shared/_features.html.erb
+++ b/app/views/shared/_features.html.erb
@@ -19,6 +19,9 @@
       time and focus on development.<br/>
       <br/>
     </p>
+    <p style="text-align: center; padding-top: 39px;"> 
+      <%= image_tag "marketing/chart-out-dated-ratio-1.png " %> 
+    </p>
   </div>
   <div class="cell2 pull-right well-white two_col_box">
     <h3>License Notifications</h3>
@@ -36,6 +39,9 @@
       <a href="http://blog.versioneye.com/2014/09/15/license-whitelist/">license whitelist</a> 
       and notify you about violations! Depending on your software development process 
       this checks can happen in real time and your software team can react immediately! 
+    </p>
+    <p style="text-align: center"> 
+      <%= image_tag "marketing/chart-license-ratio-1.png", :style => "width: 280px;" %> 
     </p>
   </div>
 </div>
