Update size of dep pie chart.

--- a/app/views/user/projects/_dep_pie_chart.html.erb
+++ b/app/views/user/projects/_dep_pie_chart.html.erb
@@ -8,7 +8,7 @@
   <% unknown += 1 if dep.prod_key.nil? %> 
 <% end %> 
 
-<div id='dep_pie' style="text-align: center; width: 410px;">
+<div id='dep_pie' style="text-align: center;">
 </div>  
 <script type="text/javascript">
   var pie = new d3pie("dep_pie", {
