Improve wording for project index!

--- a/app/views/user/projects/index.html.erb
+++ b/app/views/user/projects/index.html.erb
@@ -23,7 +23,7 @@
           <tr>
             <th></th>
             <th></th>
-            <th>Dependencies</th>
+            <th>Versions</th>
             <th>Licenses</th>
           </tr>
         </thead>
