--- a/app/views/user/projects/helpers/_project.html.erb
+++ b/app/views/user/projects/helpers/_project.html.erb
@@ -10,14 +10,14 @@
       <span style="color: <%= outdated_color(project) %>; font-size: 14px; font-weight: bold;" title="out-dated dependencies" >
         <%= project.out_number_sum %>
       </span> /
-      <span style="color: <%= unknown_color(project)%>; font-weight: bold; font-size: 14px;" title="unknown dependencies" >
-        <%= project.unknown_number_sum %>
+      <span title="all dependencies" >
+        <%= project.dep_number_sum %>
       </span>
     </td>
     <td>
       <span style="color: <%= licenses_red_color(project) %>; font-size: 14px; font-weight: bold;" title="licenses violating the license whitelist">
         <%= project.licenses_red_sum %>
-      </span> /
+      </span> :
       <span style="color: <%= licenses_unknown_color(project) %>; font-size: 14px; font-weight: bold;" title="unknown licenses">
         <%= project.licenses_unknown_sum %>
       </span>
