Unique Projects for Enterprise!

--- a/app/views/settings/globalsettings/index.html.erb
+++ b/app/views/settings/globalsettings/index.html.erb
@@ -89,6 +89,30 @@
         </div>
       </div>
 
+      <hr/>
+
+      <p class="description">
+        Project Settings
+      </p>
+
+      <div class="control-group">
+        <div class="controls">
+          <label for="unique_ga" style="font-size: 12px;" class="checkbox">
+            <%= check_box_tag "unique_ga", true, @globalsetting['unique_ga'], :id => "unique_ga" %>
+            Unique GroupId &amp; ArtifactId. This ensures that every Maven based project gets only monitored once from VersionEye. This should avoid dublication. 
+          </label>
+        </div>
+      </div>
+
+      <div class="control-group">
+        <div class="controls">
+          <label for="unique_scm" style="font-size: 12px;" class="checkbox">
+            <%= check_box_tag "unique_scm", true, @globalsetting['unique_scm'], :id => "unique_scm" %>
+            Unique SCM projects. This ensures that each project file in SCM (GitHub/Bitbucket/Stash) only gets monitored once from VersionEye. This should avoid dublication. 
+          </label>
+        </div>
+      </div>
+
       <div class="control-group">
         <div class="control-label"></div>
         <div class="controls">
