Add users link to admin settings menu.

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
 <% if !@users.nil? && !@users.empty? %>
 
   <div class="span3" >
-    
+    <%= render 'settings/navi' %>
   </div>
 
   <div class="span8">
