--- a/app/views/settings/_navi.html.erb
+++ b/app/views/settings/_navi.html.erb
@@ -10,6 +10,7 @@
     <li><%= link_to 'Email Addresses'    , settings_emails_path        , :rel => "nofollow" %></li>
     <li><%= link_to 'Password'           , settings_password_path      , :rel => "nofollow" %></li>
     <li><%= link_to 'License Whitelists' , settings_license_whitelists_path, :rel => "nofollow" %></li>
+    <li><%= link_to 'users'              , users_path, :rel => "nofollow" %></li>
     <hr/>
     <li><%= link_to 'Maven Repository'   , settings_mvnrepos_path , :rel => "nofollow" %></li>
     <li><%= link_to 'Satis Repository'   , settings_satis_path    , :rel => "nofollow" %></li>
