Update Core for Biicode.

--- a/app/views/products/_product_show_dependencies.html.erb
+++ b/app/views/products/_product_show_dependencies.html.erb
@@ -10,6 +10,7 @@
       "#{Project::A_TYPE_BOWER}"     => 'product_show_dependencies_bower',
       "#{Project::A_TYPE_COMPOSER}"  => 'product_show_dependencies_packagist',
       "#{Project::A_TYPE_COCOAPODS}" => 'products/cocoapods/product_show_dependencies',
+      "#{Project::A_TYPE_BIICODE}"   => 'product_show_dependencies_biicode'
     }
 
     partial = partial_map[@product.prod_type]
