--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,7 +15,8 @@
       "#{Project::A_TYPE_R}"         => 'products/product_show_r',
       "#{Project::A_TYPE_GITHUB}"    => 'products/product_show_github',
       "#{Project::A_TYPE_COCOAPODS}" => 'products/product_show_cocoapods',
-      "#{Project::A_TYPE_BOWER}"     => 'products/product_show_bower',
+      "#{Project::A_TYPE_BIICODE}"   => 'products/product_show_biicode',
+      "#{Project::A_TYPE_BOWER}"     => 'products/product_show_bower'
     } %>
 
     <% if ["Java", "Clojure"].member? @product.language %>
