--- a/app/assets/stylesheets/sprite.css.scss
+++ b/app/assets/stylesheets/sprite.css.scss
@@ -3,6 +3,7 @@
 
 $sprite_url: "/assets/Sprite.png";
 $c_url: "/assets/c.png";
+$biicode_url: "/assets/biicode.png";
 
 @mixin sprite($x, $y, $width, $height){
 	background: url($sprite_url) $x $y no-repeat;
@@ -13,6 +14,14 @@ $c_url: "/assets/c.png";
 }
 @mixin c_icon($x, $y, $width, $height){
 	background: url($c_url) $x $y no-repeat;
+	display: inline-block;
+	vertical-align: middle;
+	width: $width;
+	height: $height;
+}
+
+@mixin biicode_icon($x, $y, $width, $height){
+	background: url($biicode_url) $x $y no-repeat;
 	display: inline-block;
 	vertical-align: middle;
 	width: $width;
@@ -34,6 +43,12 @@ $c_url: "/assets/c.png";
 	&.on { @include c_icon($x2, $y2, $width, $height);}
 	&:hover { @include c_icon($x2, $y2, $width, $height);}
 	&:active { @include c_icon($x2, $y2, $width, $height);}
+}
+@mixin biicode_toggle($x1, $y1, $x2, $y2, $width, $height){
+	@include biicode_icon($x1, $y1, $width, $height);
+	&.on { @include biicode_icon($x2, $y2, $width, $height);}
+	&:hover { @include biicode_icon($x2, $y2, $width, $height);}
+	&:active { @include biicode_icon($x2, $y2, $width, $height);}
 }
 
 @mixin sprite_btn($x, $y, $height){
@@ -270,6 +285,16 @@ $c_url: "/assets/c.png";
 	@include c_toggle(0px, 0px, 0px, -56px, 56px, 56px);
 }
 .icon_c_big_container{
+	padding: 0;
+	width: 56px;
+	height: 56px;
+	display: inline-block;
+}
+
+.icon_biicode {
+	@include biicode_toggle(0px, 0px, 0px, -56px, 56px, 56px);
+}
+.icon_biicode_big_container{
 	padding: 0;
 	width: 56px;
 	height: 56px;
