Update address in footers.

--- a/app/views/settings/payments/receipt.html.erb
+++ b/app/views/settings/payments/receipt.html.erb
@@ -159,7 +159,7 @@ table.list .center {
   </p>
   <hr>
   <div >
-    VersionEye GmbH | Neckarauer-Waldweg 27 | 68199 Mannheim | Germany | E-Mail: contact@versioneye.com | Amtsgericht: Mannheim | Handelsregister: Mannheim, HRB 720830 | USt-IdNr.: DE282045007 | CEO: Robert Reiz.
+    VersionEye GmbH | Julius-Hatry-Strasse 1 | 68163 Mannheim | Germany | E-Mail: contact@versioneye.com | Amtsgericht: Mannheim | Handelsregister: Mannheim, HRB 720830 | USt-IdNr.: DE282045007 | CEO: Robert Reiz.
     <a href="https://www.versioneye.com/imprint">Imprint</a>.
   </div>
   <br/>
