--- a/app/views/settings/payments/receipt_footer.html
+++ b/app/views/settings/payments/receipt_footer.html
@@ -25,7 +25,7 @@
   <body>
       <hr>
       <div >
-        VersionEye GmbH | Neckarauer-Waldweg 27 | 68199 Mannheim | Germany | 
+        VersionEye GmbH | Julius-Hatry-Strasse 1 | 68163 Mannheim | Germany |
         Amtsgericht: Mannheim | Handelsregister: Mannheim, HRB 720830 | USt-IdNr.: DE282045007 
         E-Mail: contact@versioneye.com | CEO: Robert Reiz
       </div>
