Update for Language Pages.

--- a/app/views/admin/language/_language_block.html.erb
+++ b/app/views/admin/language/_language_block.html.erb
@@ -42,8 +42,7 @@
                 admin_language_path(id: encoded_language),
                 method: :delete,
                 data: {confirm: "Are you sure?"},
-                class: "btn btn-mini btn-link",
-                style: "background-color: white;"
+                class: "btn btn-mini btn-danger"
               %>
         </td>
       </tr>
