--- a/app/views/admin/language/index.html.erb
+++ b/app/views/admin/language/index.html.erb
@@ -1,7 +1,7 @@
 <%= render partial: 'upload_form' %>
 <div style = "min-height: 400px;">
   <div>
-    <div class = "btn-group">
+    <div class = "btn-group" style="padding-bottom: 10px;">
       <a class = "btn btn-primary" href = "<%= new_admin_language_path %>"><i class="icon-file-alt"></i>&nbsp;Add new language</a>
       <a class = "btn btn-primary" href="#language-upload-form" role="button" data-toggle="modal" data-backdrop="false"><i class="icon-upload-alt"></i>&nbsp;Import from JSON</a>
     </div>
