--- a/app/views/language/helpers/_language_block.html.erb
+++ b/app/views/language/helpers/_language_block.html.erb
@@ -6,30 +6,34 @@
   <img class="img centered" src="/assets/language/<%= Product.encode_language(language[:name]) %>.png" alt="<%= Product.encode_language(language[:name]) %>" />
   <table class = "table table-hover no-borders" style = "font-size: 0.85em;">
     <tbody>
-      <tr>
-        <td>Packages</td>
-        <td><%= @latest_stats[language_key.to_s]["total_package"] || 0 %></td>
-      </tr>
-      <tr>
-        <td>Artifacts</td>
-        <td><%= @latest_stats[language_key.to_s]["total_artifact"] || 0 %></td>
-      </tr>
+      <% if @latest_stats && @latest_stats[language_key.to_s] %>
+        <tr>
+          <td>Packages</td>
+          <td><%= @latest_stats[language_key.to_s]["total_package"] || 0 %></td>
+        </tr>
+        <tr>
+          <td>Artifacts</td>
+          <td><%= @latest_stats[language_key.to_s]["total_artifact"] || 0 %></td>
+        </tr>
+      <% end %> 
       <tr>
         <td>Package Manager</td>
         <td><%= language[:supported_managers] %></td>
       </tr>
-      <tr>
+      <!-- <tr>
         <td>Latest version </td>
         <td><%= language[:latest_version] %> </td>
       </tr>
       <tr>
         <td>Stable version </td>
         <td><%= language[:stable_version] %> </td>
-      </tr>
-      <tr>
-        <td>Licence </td>
-        <td><a href = "<%= language[:licence_url] %>" target = "_blank"><%= language[:licence] %></a></td>
-      </tr>
+      </tr> -->
+      <% if language[:licence_url] %>
+        <tr>
+          <td>Licence </td>
+          <td><a href = "<%= language[:licence_url] %>" target = "_blank"><%= language[:licence] %></a></td>
+        </tr>
+      <% end %> 
       <tr>
         <td>Releases</td>
         <td>
@@ -40,13 +44,27 @@
       <tr>
         <td>Links </td>
         <td>
-          <a href = "<%= language[:main_url] %>" target = "_blank">Homepage</a><br/>
-          <a href = "<%= language[:wiki_url] %>" target = "_blank">Wikipedia article</a><br/>
-          <a href = "<%= language[:repo_url] %>" target = "_blank">Github repository</a><br/>
-          <a href = "<%= language[:issues_url] %>" target = "_blank">Issues</a><br />
-          <a href = "<%= language[:mailinglist_url] %>" target = "_blank">Mailing list</a><br/>
-          <a href = "<%= language[:irc_url] %>" target = "_blank"><%= language[:irc] %></a><br/>
-          <a href = "https://twitter.com/<%= language[:twitter].to_s.sub("@", "") %>" target = "_blank"><%= language[:twitter] %></a><br />
+          <% if !language[:main_url].to_s.empty? %>    
+            <a href = "<%= language[:main_url] %>" target = "_blank">Homepage</a><br/>
+          <% end %> 
+          <% if !language[:wiki_url].to_s.empty? %>    
+            <a href = "<%= language[:wiki_url] %>" target = "_blank">Wikipedia article</a><br/>
+          <% end %>
+          <% if !language[:repo_url].to_s.empty? %>
+            <a href = "<%= language[:repo_url] %>" target = "_blank">Github repository</a><br/>
+          <% end %>
+          <% if !language[:issues_url].to_s.empty? %>
+            <a href = "<%= language[:issues_url] %>" target = "_blank">Issues</a><br />
+          <% end %>
+          <% if !language[:mailinglist_url].to_s.empty? %>
+            <a href = "<%= language[:mailinglist_url] %>" target = "_blank">Mailing list</a><br/>
+          <% end %>
+          <% if !language[:irc_url].to_s.empty? %>
+            <a href = "<%= language[:irc_url] %>" target = "_blank"><%= language[:irc] %></a><br/>
+          <% end %>
+          <% if !language[:twitter].to_s.empty? %>
+            <a href = "https://twitter.com/<%= language[:twitter].to_s.sub("@", "") %>" target = "_blank"><%= language[:twitter] %></a><br />
+          <% end %>
         </td>
       </tr>
     </tbody>
