Update navigation for admin in settings.

--- a/app/views/settings/_navi.html.erb
+++ b/app/views/settings/_navi.html.erb
@@ -8,7 +8,11 @@
     <li><%= link_to 'Global Settings'    , settings_globalsettings_path, :rel => "nofollow" %></li>
     <li><%= link_to 'SMTP Settings'      , settings_emailsettings_path , :rel => "nofollow" %></li>
     <li><%= link_to 'Email Addresses'    , settings_emails_path        , :rel => "nofollow" %></li>
+    <li><%= link_to 'Connect'            , settings_connect_path , :rel => "nofollow" %></li>
     <li><%= link_to 'Password'           , settings_password_path      , :rel => "nofollow" %></li>
+    <li><%= link_to 'Notification Center', settings_notifications_path, :rel => "nofollow" %></li>
+    <li><%= link_to 'Privacy'            , settings_privacy_path , :rel => "nofollow" %></li>
+    <li><%= link_to 'API Key'            , settings_api_path     , :rel => "nofollow" %></li>
     <li><%= link_to 'License Whitelists' , settings_license_whitelists_path, :rel => "nofollow" %></li>
     <li><%= link_to 'users'              , users_path, :rel => "nofollow" %></li>
     <hr/>
